# The-SCARA-Project

./: .gitignore  LICENSE  README.md
SCARA_Robot/: SCARA_Robot_TestMode.ino
SCARA_Robot_GUI/: README.md  config.py  kinematics.py  requirements.txt  robot_visualizer.py  scara_gui.py  serial_comm.py
scara_robot_ros2/: README.md  docker-compose.yml  test_tf.sh
scara_robot_ros2/src/scara_control/: package.xml  setup.py
scara_robot_ros2/src/scara_control/scara_control/: __init__.py  kinematics.py
scara_robot_ros2/src/scara_description/: CMakeLists.txt  package.xml
scara_robot_ros2/src/scara_description/launch/: display.launch.py  display_simple.launch.py  display_urdf.launch.py  simple_display.launch.py  test_joint_publisher.launch.py  test_robot.launch.py
scara_robot_ros2/src/scara_description/scripts/: joint_state_publisher_simple.py  publish_joint_states.py  start_robot.py
scara_robot_ros2/src/scara_description/urdf/: scara_robot.urdf  scara_robot.urdf.xacro
